--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   --darkBg: #1f2937;
   --buttonBg: #3882f6;
   --quoteBg: #e5e7eb;
+  --secondaryTextBg: #babec5;
   --maxWidth: 1035px;
 }
 body {
@@ -34,7 +35,7 @@ navbar {
   font-size: 24px;
 }
 .nav-links {
-  color: #e5e7eb;
+  color: var(--secondaryTextBg);
   font-size: 18px;
   list-style: none;
   padding: 0;
@@ -45,12 +46,12 @@ navbar {
   max-width: var(--maxWidth);
   margin: 0 auto;
   display: flex;
-  padding: 5rem 0;
+  padding: 7rem 0;
 }
 .hero p {
   padding: 0;
   font-size: 18px;
-  color: #babec5;
+  color: var(--secondaryTextBg);
 }
 .hero-text-section {
   padding-right: 4.25rem;
@@ -68,4 +69,46 @@ navbar {
   font-weight: 700;
   padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
+}
+
+.info {
+  max-width: var(--maxWidth);
+  margin: 0 auto;
+  padding: 2rem 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.info-text {
+  font-size: 36px;
+  font-weight: 800;
+  color: #1f2937;
+}
+
+.item-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 2.25rem;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 170px;
+  color: #1f2937;
+  font-weight: 500;
+}
+
+.item-img {
+  width: 170px;
+  height: 170px;
+  object-fit: cover;
+  border: 4px solid #3882f6;
+  border-radius: 1rem;
+}
+.subtext {
+  /* width: min-content; */
 }
