--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
-
+/* HEADER */
 header {
   background-color: var(--darkBg);
   color: #f9faf8;
@@ -42,6 +42,7 @@ navbar {
   display: flex;
   gap: 1rem;
 }
+/* HERO SECTION */
 .hero {
   max-width: var(--maxWidth);
   margin: 0 auto;
@@ -61,7 +62,7 @@ navbar {
   font-weight: extra-bold;
   margin: 0;
 }
-.sign-up {
+.sign-up-btn {
   background-color: var(--buttonBg);
   border: none;
   color: white;
@@ -70,6 +71,8 @@ navbar {
   padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
 }
+
+/* INFO SECTION */
 
 .info {
   max-width: var(--maxWidth);
@@ -90,6 +93,7 @@ navbar {
   display: flex;
   justify-content: center;
   gap: 2.25rem;
+  padding-bottom: 6rem;
 }
 
 .item {
@@ -110,5 +114,62 @@ navbar {
   border-radius: 1rem;
 }
 .subtext {
-  /* width: min-content; */
+  margin: 0.5rem 0;
+}
+/* QUOTE */
+.quote {
+  background-color: #e5e7eb;
+  padding: 7rem 0 5rem 0;
+  font-size: 36px;
+}
+
+figure {
+  margin: 0 auto;
+  width: 55%;
+}
+figcaption {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: right;
+}
+blockquote {
+  margin: 0;
+}
+blockquote p {
+  color: #1f2937;
+  font-weight: 100;
+  font-style: italic;
+}
+
+/* SIGN UP */
+.sign-up {
+  padding: 4rem 0;
+  max-width: var(--maxWidth);
+  margin: 0 auto;
+}
+.action {
+  background-color: #3882f6;
+  color: white;
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 3rem 0;
+  height: 10rem;
+}
+.action-info > h3 {
+  font-size: 1.5rem;
+  margin: 0;
+}
+.action-info > p {
+  margin: 0;
+}
+.action-btn > button {
+  padding: 0.25rem 1rem;
+  font-size: 1rem;
+  font-weight: 700;
+  background: none;
+  color: white;
+  border: 2px solid white;
+  border-radius: 0.5rem;
 }
