--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ blockquote p {
   color: #1f2937;
   font-weight: 100;
   font-style: italic;
+  opacity: 0.5;
 }
 
 /* SIGN UP */
@@ -183,4 +184,21 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 870px) {
+  .hero {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+  .hero img {
+    max-width: 450px;
+  }
+  .item-container {
+    flex-wrap: wrap;
+  }
+  .action {
+    padding: 3rem 1rem;
+  }
 }
